--- a/todo-app/src/main/resources/application.properties
+++ b/todo-app/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=todo-app
+spring.datasource.url=jdbc:mysql://localhost:3306/tododb
+spring.datasource.username=root
+spring.datasource.password=welcome1
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
